@@ -14549,4 +14549,6 @@ Failed: number is too big at offset 16
 /(?(8000000000/
 Failed: number is too big at offset 13
 
+/(?:ab)?(?:ab)(?:ab)/
+
 /-- End of testinput2 --/
